<resources>
    <string name="app_name">Simarropop</string>
    <string name="login_welcome">Bienvenido a Simarropop</string>
    <string name="login_user">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_register">¿No tienes cuenta? Regístrate</string>
    <string name="login_start">Entrar</string>
    <string name="register_welcome">Únete a Simarropop</string>
    <string name="register_name">Nombre y Apellidos</string>
    <string name="register_user">Email</string>
    <string name="register_password">Contraseña</string>
    <string name="register_check">Acepto los términos y condiciones</string>
    <string name="register_start">Resgistrarse</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>